Fixing bottom spacing, mobile menu last child

--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,8 @@ ul {
 
 #main-menu li:last-child {
 	border-bottom: none;
+	padding-bottom: 0;
+	margin-bottom: 0;
 }
 
 #mobile-topcontrol {
